# Trill

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  rolls.txt  setup.cfg
.github/workflows/: publish.yml  test.yml
examples/: rolls.py
src/: error.py  interpreter.py  main.py  parser.py  reserved.py  tokenizer.py  tokens.py
src/ast/: statement.py
src/trill/: __init__.py  calculator.py  error.py  functions.py  interpreter.py  main.py  parser.py  reserved.py  string.py  tokenizer.py  tokens.py  types.py
src/trill/ast/: base.py  expression.py  printer.py  statement.py
src/trill/tests/: cases.py  probability_cases.py  test_errors.py  test_functions.py  test_interpreter.py  test_parser.py  test_probabilities.py  test_rolls.py  test_string.py  test_syntax_tree.py  test_tokenizer.py
src/troll/: cli.py  error.py  interpreter.py  main.py  parser.py  reserved.py  tokenizer.py  tokens.py
src/troll/ast/: base.py  expression.py  printer.py  statement.py
tests/: cases.py  test_errors.py  test_rolls.py  test_scanner.py  test_syntax_tree.py  test_tokenizer.py
