[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trill"
version = "0.0.2"
description = "Troll language parser and interpreter."
readme = "README.md"
authors = [
  { name = "Greger Stolt Nilsen", email = "gregersn@gmail.com" },
]
license = { file ="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
keywords = ["troll", "dice", "interpreter"]
dependencies = [
  "typer>=0.6.1"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/gregersn/Trill"

[project.scripts]
trill = "trill.main:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["trill"]
namespaces = false

[tool.pylint]
max-line-length=140

[tool.pylint."MESSAGE CONTROL"]
disable="missing-function-docstring,missing-class-docstring,invalid-name,too-few-public-methods"
