[metadata]
name = troll
version = 0.0.1
author = Greger Stolt Nilsen
author_email = gregersn@gmail.com
description = Python implementation of the Troll language
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operation System :: OS Independent

[options]
package_dir =
    = src
packages = find
python_required = >= 3.10

[options.packages.find]
where = src